static/style.css
body {
    padding: 0;
    margin: 0;
    
}

main {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    height: 100vh; 
}

#to-do {
    background-color: #eaeaea;
}
#doing {
    background-color: #fef6d1;
}
#done {
    background-color: #dff7f0;
}

#to-do .card {
    border-left: 5px solid #3498db; /* blue */
}
#doing .card {
    border-left: 5px solid #f1c40f; /* yellow */
}
#done .card {
    border-left: 5px solid #2ecc71; /* green */
}

section {
    padding: 2em;
}
section h1 {
    font-size: 1.8em;
    margin-bottom: 1em;
}

header {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    padding: 1em;
    background-color: #2c3e50;
    align-items: center;
}
header div {
    display: flex;
    align-items: center;
    justify-content: center; 
    gap: 0.5em;
}

#logout {
    justify-self: end;
}

#login, #register {
    grid-column: 3;
    justify-self: end;
}

#register-form, #login-form {
    display: flex;
    justify-content: center;
    align-items: center;
}

form {
    padding: 2em;
    border: solid black 0.1em;
    border-radius: 0.2em;
    margin-bottom: 5em;
}

a {
    color: white;
    text-decoration: none;
}

.delete {
    display: block;
    cursor: pointer;
}


.card {
    position: relative; 
    border-radius: 0.5em;
    background-color: #ffffff;
    padding: 1em;
    width: 20em;
    margin-bottom: 0.5em;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
    transition: transform 0.1s ease-in-out;
}

.card:hover {
    transform: scale(1.01);
}

.drag-handle {
    position: absolute;
    top: 0.5em;
    right: 0.5em;
    cursor: pointer;
    font-size: 1.5em;
    width: 48px;
    height: 48px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.card-container {
    position: relative;
    width: 20em;
    margin-bottom: 0.5em;
}

.delete {
    padding: 0.2em;
    position: absolute;
    width: 1.2em;
    height: 1.2em;
    top: 0em;    
    right: -4.5em;   
    cursor: pointer;
    background: #fff; 
    border: 1px solid #eee;
    border-radius: 50%; 
    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
}

#new {
    font-size: 1em;
    background-color: #ffffff;
    border-radius: 0.5em;
}

h2 {
    margin: 0;
}
.card p {
    white-space: normal;  /* allow wrapping */
    word-wrap: break-word;
}

#login-form a, #register-form a {
    background-color: black;
    padding: 0.2em;
    border-radius: 0.5em;
}


#save-status {
    display: inline-block;
    width: 2em;
    height: 1em;
    color: white;
}
#save {
    padding: 0.5em;
    border: none;
    background-color: white;
    border-radius: 0.5em;
    cursor: pointer;
}

